runFormatTest(import.meta, ["yaml"]);
runFormatTest(import.meta, ["yaml"], { objectWrap: "collapse" });
