// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mixed.yml - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
block_mapping:
  a: 1
  b: 2
flow_mapping: {a: 1, b: 2}
block_sequence:
  - 1
  - 2
flow_sequence: [1, 2]
---
nested:
  flow_in_block: {x: [1, 2, 3]}
---
- {name: Alice, age: 30}
- {name: Bob, age: 25}
---
long_block_mapping:
  somewhat_long_key_alpha: somewhat_long_value_alpha
  somewhat_long_key_bravo: somewhat_long_value_bravo
---
empty_flow_mapping: {}
empty_flow_sequence: []
empty_block_mapping:
empty_block_sequence:

=====================================output=====================================
block_mapping: { a: 1, b: 2 }
flow_mapping: { a: 1, b: 2 }
block_sequence: [1, 2]
flow_sequence: [1, 2]
---
{ nested: { flow_in_block: { x: [1, 2, 3] } } }
---
[{ name: Alice, age: 30 }, { name: Bob, age: 25 }]
---
long_block_mapping:
  somewhat_long_key_alpha: somewhat_long_value_alpha
  somewhat_long_key_bravo: somewhat_long_value_bravo
---
empty_flow_mapping: {}
empty_flow_sequence: []
empty_block_mapping:
empty_block_sequence:

================================================================================
`;

exports[`mixed.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
block_mapping:
  a: 1
  b: 2
flow_mapping: {a: 1, b: 2}
block_sequence:
  - 1
  - 2
flow_sequence: [1, 2]
---
nested:
  flow_in_block: {x: [1, 2, 3]}
---
- {name: Alice, age: 30}
- {name: Bob, age: 25}
---
long_block_mapping:
  somewhat_long_key_alpha: somewhat_long_value_alpha
  somewhat_long_key_bravo: somewhat_long_value_bravo
---
empty_flow_mapping: {}
empty_flow_sequence: []
empty_block_mapping:
empty_block_sequence:

=====================================output=====================================
block_mapping:
  a: 1
  b: 2
flow_mapping: { a: 1, b: 2 }
block_sequence:
  - 1
  - 2
flow_sequence: [1, 2]
---
nested:
  flow_in_block: { x: [1, 2, 3] }
---
- { name: Alice, age: 30 }
- { name: Bob, age: 25 }
---
long_block_mapping:
  somewhat_long_key_alpha: somewhat_long_value_alpha
  somewhat_long_key_bravo: somewhat_long_value_bravo
---
empty_flow_mapping: {}
empty_flow_sequence: []
empty_block_mapping:
empty_block_sequence:

================================================================================
`;

exports[`multiline.yml - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{a: 1, b: 2, c: 3}
---
{a: 1,
  b: 2,
  c: 3}
---
[1, 2, 3]
---
[1,
  2,
  3]
---
key: {a: 1,
  b: 2}
---
key: {a: 1, b: 2}
---
key: [1,
  2, 3]
---
key: [1, 2, 3]
---
{a: 1,
  b: [2,
    3],
  c: {d: 4,
    e: 5}}
---
[{a: 1,
  b: 2}, {c: 3,
  d: 4}]

=====================================output=====================================
{ a: 1, b: 2, c: 3 }
---
{ a: 1, b: 2, c: 3 }
---
[1, 2, 3]
---
[1, 2, 3]
---
{ key: { a: 1, b: 2 } }
---
{ key: { a: 1, b: 2 } }
---
{ key: [1, 2, 3] }
---
{ key: [1, 2, 3] }
---
{ a: 1, b: [2, 3], c: { d: 4, e: 5 } }
---
[{ a: 1, b: 2 }, { c: 3, d: 4 }]

================================================================================
`;

exports[`multiline.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{a: 1, b: 2, c: 3}
---
{a: 1,
  b: 2,
  c: 3}
---
[1, 2, 3]
---
[1,
  2,
  3]
---
key: {a: 1,
  b: 2}
---
key: {a: 1, b: 2}
---
key: [1,
  2, 3]
---
key: [1, 2, 3]
---
{a: 1,
  b: [2,
    3],
  c: {d: 4,
    e: 5}}
---
[{a: 1,
  b: 2}, {c: 3,
  d: 4}]

=====================================output=====================================
{ a: 1, b: 2, c: 3 }
---
a: 1
b: 2
c: 3
---
[1, 2, 3]
---
- 1
- 2
- 3
---
key:
  a: 1
  b: 2
---
key: { a: 1, b: 2 }
---
key:
  - 1
  - 2
  - 3
---
key: [1, 2, 3]
---
a: 1
b:
  - 2
  - 3
c:
  d: 4
  e: 5
---
- a: 1
  b: 2
- c: 3
  d: 4

================================================================================
`;
